--- a/app/src/main/res/layout/item_shift.xml
+++ b/app/src/main/res/layout/item_shift.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:textColor="@color/calendar_day_text"
+                android:textColor="@color/calendar_text_day"
                 android:textStyle="bold"/>
 
             <TextView
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:textSize="14sp"
-                android:textColor="@color/calendar_lunar_text"/>
+                android:textColor="@color/calendar_text_lunar"/>
 
             <TextView
                 android:id="@+id/text_shift_note"
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:textSize="14sp"
-                android:textColor="@color/calendar_lunar_text"
+                android:textColor="@color/calendar_text_lunar"
                 android:visibility="gone"/>
         </LinearLayout>
 
